<resources>
    <string name="app_name">SumIt UP</string>

    <string name="math_quiz_game">Check your Mind</string>

    <string name="start_game">Start Game</string>

    <string name="level_1">Level 1</string>
    <string name="score_0">Score: 0</string>
    <string name="_10">10</string>

    <string name="_55_69">55 + 69 = ?</string>
    <string name="question_1_100">Question- 1/100</string>

    <string name="a">A:</string>
    <string name="_134">134</string>

    <string name="b">B:</string>
    <string name="_134_2">134</string>

    <string name="c">C:</string>
    <string name="_134_3">134</string>

    <string name="d">D:</string>
    <string name="_134_4">134</string>

    <string name="description">SumItUp is a dynamic math quiz application engineered to sharpen users\' summation abilities with lightning speed. SumItUp offers an immersive learning experience, empowering users to master the art of swift summation anytime, anywhere.</string>
    <string name="description_button">Get Started</string>

    <string name="logo2">logo2</string>
    <string name="appName">SumItUp</string>
    <string name="welcome_message">Welcome!</string>
    <string name="openButton">Go</string>

    <string name="score_history">Score History</string>
    <string name="view_score_history">View Score History</string>
    <string name="high_score">High Score:</string>

</resources>