<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/background_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <LinearLayout
        android:gravity="center"
        android:id="@+id/dashbord"
        android:background="@drawable/rounded_background_box"
        android:orientation="vertical"
        android:padding="20sp"
        android:layout_width="wrap_content"
        android:layout_height="300sp">

        <TextView
            android:id="@+id/title"
            android:text="@string/math_quiz_game"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="10sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/StartButton"
            android:text="@string/start_game"
            android:textColor="@color/white">
        </Button>

        <Button
            android:id="@+id/history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/StartButton"
            android:text="@string/view_score_history"
            android:textColor="@color/white"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gamelayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="30sp"
            android:layout_marginRight="20sp"
            android:text="@string/score_0"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_marginBottom="20sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/CircularProgressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:visibility="visible" />

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:text="@string/_10"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="20sp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="5sp">
            </TextView>

            <TextView
                android:layout_marginTop="150sp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="5sp">
            </TextView>

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="20sp"
                android:background="#7E000000"
                android:padding="40sp"
                android:text="@string/_55_69"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold">
            </TextView>


            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/questionNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/QNumberButton"
                    android:text="@string/question_1_100"
                    android:textColor="@color/white"
                    android:textSize="17sp">
                </Button>
            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="40sp"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:text="@string/a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <Button
                    android:id="@+id/option1Button"
                    android:textSize="30sp"
                    android:text="@string/_134"
                    android:textColor="@color/white"
                    android:layout_marginRight="20sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_background_box"
                    android:layout_width="match_parent"
                    android:layout_height="60sp">
                </Button>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="40sp"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:text="@string/b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <Button
                    android:id="@+id/option2Button"
                    android:textSize="30sp"
                    android:text="@string/_134_2"
                    android:textColor="@color/white"
                    android:layout_marginRight="20sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_background_box"
                    android:layout_width="match_parent"
                    android:layout_height="60sp">
                </Button>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="40sp"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:text="@string/c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <Button
                    android:id="@+id/option3Button"
                    android:textSize="30sp"
                    android:text="@string/_134_3"
                    android:textColor="@color/white"
                    android:layout_marginRight="20sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_background_box"
                    android:layout_width="match_parent"
                    android:layout_height="60sp">
                </Button>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="40sp"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:text="@string/d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <Button
                    android:id="@+id/option4Button"
                    android:textSize="30sp"
                    android:text="@string/_134_4"
                    android:textColor="@color/white"
                    android:layout_marginRight="20sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_background_box"
                    android:layout_width="match_parent"
                    android:layout_height="60sp">
                </Button>
            </RelativeLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp">
        </Space>

    </LinearLayout>

</LinearLayout>